<resources>
    <string name="app_name">Designs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="giris_envanTrack">Envan Track\'e Giriş</string>
    <string name="giris_cumlesi">Varlıklarınızı koruyun ve yönetin</string>
    <string name="eposta">E-posta</string>
    <string name="sifre">Şifre</string>
    <string name="giris">Giriş</string>
    <string name="hesabinizyokmu">Hesabınız yok mu ?</string>
    <string name="kayitol">Kayıt Ol</string>
    <string name="hosgeldin">Hoşgeldin, </string>
    <string name="kullaniciAdi">merve@gmail.com</string>
    <string name="tumIslemler">Tüm İşlemler</string>
    <string name="zimmetlerim">Zimmetlerim</string>
    <string name="tumDemirbaslar">Tüm Demirbaşlar</string>
    <string name="kategoriCesidi">Kategori Çeşidi : </string>
    <string name="toplamZimmet">Toplam Zimmet</string>
    <string name="toplamDemirbas">Toplam Demirbaş</string>
    <string name="yoneticiIslemleri">Yönetici İşlemleri</string>
    <string name="personelIslemleri">Personel İşlemleri</string>
    <string name="demisrbasIslemleri">Demirbaş İşlemleri</string>
    <string name="demirbasEkle">Demirbaş Ekle</string>
    <string name="demirbasSil">Demirbaş Sil</string>
    <string name="demirbasGuncelle">Demirbaş Güncelle</string>
    <string name="demirbasListele">Demirbaş Listele</string>
    <string name="personelEkle">Personel Ekle</string>
    <string name="personelSil">Personel Sil</string>
    <string name="personelGuncelle">Personel Güncelle</string>
    <string name="personelListele">Personel Listele</string>
    <string name="personelIslemleriEkle">Personel İşlemleri / Personel Ekle</string>
    <string name="adiniz">Adınız *</string>
    <string name="adiniziGiriniz">Adınızı Giriniz</string>
    <string name="soyadiniz">Soyadınız *</string>
    <string name="soyadiniziGiriniz">Soyadınızı Giriniz</string>
    <string name="eklemekIstediginiz">Eklemek istediğiniz personelin bilgilerini giriniz.</string>
    <string name="emailiniz">E-mail Adresiniz *</string>
    <string name="emailiniziGiriniz">E-mail Adresinizi Giriniz</string>
    <string name="telefonunuz">Telefon Numaranız *</string>
    <string name="telefonunuzuGiriniz">Telefon Numaranızı Giriniz</string>
    <string name="statu">Statüyü Seçiniz *</string>
    <string name="personel">Personel</string>
    <string name="yonetici">Yönetici</string>
    <string name="sifreniz">Şifreniz *</string>
    <string name="sifreniziGiriniz">Şifrenizi Giriniz</string>
    <string name="tekrarSifreniz">Tekrar Şifreniz *</string>
    <string name="sifreniziTekrarGiriniz">Şifrenizi Tekrar Giriniz</string>
    <string name="personelIslemleriSil">Personel İşlemleri / Personel Sil</string>
    <string name="silmekIstediginiz">Silmek istediğiniz personelin bilgilerini giriniz</string>
    <string name="personelID">ID giriniz</string>
    <string name="personelAdSoyad">Personel adını ve soyadını giriniz</string>
    <string name="IDBilinmiyorsa">ID bilmiyorsanız ad ve soyad giriniz</string>
    <string name="personelBul">Personel Bul</string>
    <string name="demirbaslar">Demirbaşlar</string>
    <string name="sayfadaGoruntulenenVeriSayisi"> </string>
    <string name="demirbasIslemleriDemirbasEkle">Demirbaş İşlemleri / Demirbaş Ekle</string>
    <string name="eklemekIstediginizDemirbas">Eklemek istediğiniz demirbaş bilgilerini giriniz.</string>
    <string name="demirbasAdiGiriniz">Demirbaş Adını Giriniz *</string>
    <string name="demirbasAdi">Demirbaş Adı</string>
    <string name="kategoriSeciniz">Kategori</string>
    <string name="zimmetlenecekKullaniciSeciniz">Zimmetlenecek Kullanıcı (Opsiyonel)</string>
    <string name="ekle">Ekle</string>
    <string name="personeller">Personeller</string>
    <string name="sayfadaListelenenPersonelSayisi">.. personel listelendi</string>
    <string name="cikisYap">Çıkış Yap</string>
    <string name="zimmetEnvanterim">"Zimmet Envanterim"</string>


</resources>