<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!-- Fragment'e bağlanan veri değişkeni -->
        <variable
            name="loginFragmentNesnesi"
            type="com.example.designs.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/c1">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginTop="150dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/giris_envanTrack"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/giris_cumlesi"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="@string/eposta"
                android:inputType="text"
                android:background="@drawable/edittextbackground"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittextbackground"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:background="@drawable/edittextbackground2"
                    android:ems="10"
                    android:hint="@string/sifre"
                    android:inputType="textPassword"
                    />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/visibility" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/giris"
                android:background="@drawable/buttonbackground"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textAllCaps="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    app:srcCompat="@drawable/kesiklicizgi" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/hesabinizyokmu" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="2"
                    app:srcCompat="@drawable/kesiklicizgi" />
            </LinearLayout>

            <Button
                android:id="@+id/button4"
                android:layout_width="170dp"
                android:layout_height="35dp"
                android:text="@string/kayitol"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:backgroundTint="@color/c4"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
